@@ -6,6 +6,8 @@ $Id$
 $Source$
 
 2004-01-05 Garvin Hicking <returnofthegarv@supergarv.de>
+    * browse_foreigners.php, tbl_change.php: Sort key/value pairs
+      as discussed in RFE #868369. Made foreigner window resizable.
     * libraries/functions.js: Reverted row marker patch. See RFE #867284 
       for details.
     * libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php,
